<resources>
    <string name="app_name">Operator</string>

    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="high_scores">High Scores</string>
    <string name="instructions">Instructions</string>
    <string name="clock">Clock:</string>
    <string name="level">Level:</string>
    <string name="score">Score:</string>
    <string name="lives_left">Lives Left:</string>
    <string name="power_up">Power Up:</string>
    <string name="pause">PAUSE</string>
    <string name="inactive">INACTIVE</string>
    <string name="touch_to_begin">Touch this screen to begin</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="top">TOP</string>
    <string name="bottom">BOTTOM</string>
    <string name="none">NONE</string>
    <string name="start">START</string>
    <string name="resume">RESUME</string>
    <string name="change_color">CHANGE COLOR</string>
    <string name="options">Options</string>



    <!-- Preferences Strings -->
    <string name="sound_status">SOUND_STATUS</string>
    <string name="sound_on">SOUND_ON</string>
    <string name="sound_off">SOUND_OFF</string>

    <string name="difficulty_status">DIIFICULTY_STATUS</string>
    <string name="diffiiculty_easy">DIFFICULTY_EASY</string>
    <string name="difficulty_medium">DIFFICULTY_MEDIUM</string>
    <string name="difficulty_hard">DIFFICULTY_HARD</string>

    <!-- -->

    <!-- Color String Keys -->
    <string name="red">RED</string>
    <string name="green">GREEN</string>
    <string name="blue">BLUE</string>
    <string name="pink">PINK</string>
    <!-- -->
</resources>
