<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="This is some Text"
            />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2"
        android:weightSum="8"
        >

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:layout_weight="2"
            />

        <TextView
            android:id="@+id/livesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lives_left"
            android:layout_weight="2"
            />

        <TextView
            android:id="@+id/powerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/power_up"
            android:layout_weight="0.36"
            />

        <Button
            android:id="@+id/powerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inactive"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/pauseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:layout_weight="1"
            />

        </LinearLayout>


</LinearLayout>